test_regress/t/t_pp_misdef_bad.out
%Error: t/t_pp_misdef_bad.v:10:4: Define or directive not defined: '`NDEFINED'
                                : ... Suggested alternative: '`DEFINED'
   `NDEFINED
   ^~~~~~~~~
%Error: t/t_pp_misdef_bad.v:13:6: Define or directive not defined: '`imescale'
                                : ... Suggested alternative: '`timescale'
     `imescale
     ^~~~~~~~~
%Error: Exiting due to
